# padjective

./: .gitignore  AGENTS.md  README.md  envsetup.sh  extract_products_from_shopifyscrape.sql  extract_products_from_shopifyscrape_sample.sql  pyproject.toml  sweep.yaml
.github/workflows/: pipeline.yml  python.yml
data/: adjective_corpus.json
padjective/: display.py  ranking.py  tagbattle.py  uvbootstrapper.py
tests/: test_display.py  test_ranking.py  test_tagbattle.py
