[project]
name = "padjective"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "choix>=0.3.6",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
]
[project.scripts]
tagbattle = "padjective.tagbattle:main"
ranking = "padjective.ranking:main"
display = "padjective.display:main"

